# autotools-examples

hello-world/: .gitignore  README.md  configure.ac
sample/: config.h  configure.ac  helloworld
simple/: Makefile.am  configure.ac
