#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_ARG_WITH([arg],
            [AS_HELP_STRING([--arg],
                            [arg for this command])],
            [ARG=$withval])
AC_SUBST(ARG)
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
